deploy/tap/authserver.yaml
#@ load("@ytt:data", "data")

---
apiVersion: v1
kind: Service
metadata:
  name: acme-fitness-authserver
spec:
  selector:
    app.kubernetes.io/part-of: acme-fitness-authserver
    app.kubernetes.io/component: authorization-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: acme-fitness-authserver
spec:
  virtualhost:
    fqdn: #@ "acme-fitness-authserver.{}.{}".format(data.values.namespace,data.values.baseUrl)
  routes:
    - conditions:
        - prefix: /
      services:
        - name: acme-fitness-authserver
          port: 80
