deploy/tap/gateway.yaml
#@ load("@ytt:data", "data")

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-fitness-gateway
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: #@ "acme-fitness.{}.{}".format(data.values.namespace,data.values.baseUrl)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acme-fitness-gateway
                port:
                  number: 80
